--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/responsive.css">
     <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
         </div>
         <article class="card-description">
             <h1>Improve your front-end skills by building projects</h1>
-            <p>Scan the QR code to visit Frontend Mentor and take your coding skilss to the next level</p>
+            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </article>
     </main>
     
