reducing structures on html and css

--- a/index.html
+++ b/index.html
@@ -17,15 +17,10 @@
     <title>Frontend Mentor | QR code component</title>
 </head>
 <body>
-    <main class="card">
-        <div class="qr-code">
-            <img src="assets/images/image-qr-code.png" alt=" QR code image">
-        </div>
-        <article class="card-description">
-            <h1>Improve your front-end skills by building projects</h1>
-            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-        </article>
+    <main>
+        <img src="assets/images/image-qr-code.png" alt=" QR code image">
+        <h1>Improve your front-end skills by building projects</h1>
+        <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </main>
-    
 </body>
 </html>
